--- a/servidor_minecraft/plugins/TAB/animations.yml
+++ b/servidor_minecraft/plugins/TAB/animations.yml
@@ -1,35 +1,35 @@
 MyAnimation1:
   change-interval: 100
   texts:
-    - '&d-&3--------------'
-    - '&3-&d-&3-------------'
-    - '&3--&d-&3------------'
-    - '&3---&d-&3-----------'
-    - '&3----&d-&3----------'
-    - '&3-----&d-&3---------'
-    - '&3------&d-&3--------'
-    - '&3-------&d-&3-------'
-    - '&3--------&d-&3------'
-    - '&3---------&d-&3-----'
-    - '&3----------&d-&3----'
-    - '&3-----------&d-&3---'
-    - '&3------------&d-&3--'
-    - '&3-------------&d-&3-'
-    - '&3--------------&d-'
-    - '&3-------------&d-&3-'
-    - '&3------------&d-&3--'
-    - '&3-----------&d-&3---'
-    - '&3----------&d-&3----'
-    - '&3---------&d-&3-----'
-    - '&3--------&d-&3------'
-    - '&3-------&d-&3-------'
-    - '&3------&d-&3--------'
-    - '&3-----&d-&3---------'
-    - '&3----&d-&3----------'
-    - '&3---&d-&3-----------'
-    - '&3--&d-&3------------'
-    - '&3-&d-&3-------------'
-    - '&d-&3--------------'
+    - '&f-&b--------------'
+    - '&b-&f-&b-------------'
+    - '&b--&f-&b------------'
+    - '&b---&f-&b-----------'
+    - '&b----&f-&b----------'
+    - '&b-----&f-&b---------'
+    - '&b------&f-&b--------'
+    - '&b-------&f-&b-------'
+    - '&b--------&f-&b------'
+    - '&b---------&f-&b-----'
+    - '&b----------&f-&b----'
+    - '&b-----------&f-&b---'
+    - '&b------------&f-&b--'
+    - '&b-------------&f-&b-'
+    - '&b--------------&f-'
+    - '&b-------------&f-&b-'
+    - '&b------------&f-&b--'
+    - '&b-----------&f-&b---'
+    - '&b----------&f-&b----'
+    - '&b---------&f-&b-----'
+    - '&b--------&f-&b------'
+    - '&b-------&f-&b-------'
+    - '&b------&f-&b--------'
+    - '&b-----&f-&b---------'
+    - '&b----&f-&b----------'
+    - '&b---&f-&b-----------'
+    - '&b--&f-&b------------'
+    - '&b-&f-&b-------------'
+    - '&f-&b--------------'
 ServerName:
   change-interval: 300
   texts:
@@ -53,7 +53,7 @@ web:
   - '&eww&6w&e.domain.com'
   - '&ewww&6.&edomain.com'
   - '&ewww.&6d&eomain.com'
-  - '&ewww.d&6o&emain.com'
+  - '&ewww.f&6o&emain.com'
   - '&ewww.do&6m&eain.com'
   - '&ewww.dom&6a&ein.com'
   - '&ewww.doma&6i&en.com'
