--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed Sep 03 20:28:57 UTC 2025
+#Wed Sep 03 21:48:32 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -30,10 +30,11 @@ level-seed=
 level-type=minecraft\:normal
 log-ips=true
 max-chained-neighbor-updates=1000000
-max-players=20
+max-players=35
 max-tick-time=60000
 max-world-size=29999984
-motd=§r              §5§l(MSX)  §dHosting Gratuito§r\n          §f§nhttps\://discord.gg/w9xt8ydNZe
+motd=§r                   §b§l-SGR-          
+                     §f§nSolo de DIOSES
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
