--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed Sep 03 21:48:32 UTC 2025
+#Wed Sep 03 21:54:17 UTC 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -34,14 +34,13 @@ max-players=35
 max-tick-time=60000
 max-world-size=29999984
 motd=§r                   §b§l-SGR-          
-                     §f§nSolo de DIOSES
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
 pause-when-empty-seconds=-1
 player-idle-timeout=0
 prevent-proxy-connections=false
-pvp=true
+pvp=false
 query.port=25565
 rate-limit=0
 rcon.password=
@@ -63,3 +62,4 @@ text-filtering-version=0
 use-native-transport=true
 view-distance=15
 white-list=false
+§f§n_Solo=de DIOSES_
