--- a/servidor_minecraft/plugins/Essentials/config.yml
+++ b/servidor_minecraft/plugins/Essentials/config.yml
@@ -27,11 +27,11 @@
 
 # A color code between 0-9 or a-f. Set to 'none' to disable.
 # In 1.16+, you can use hex color codes here as well (for example, #613e1d is brown).
-ops-name-color: '4'
+ops-name-color: 'f'
 
 # The character(s) to prefix all nicknames, so that you know they are not true usernames.
 # Players with 'essentials.nick.hideprefix' will not be prefixed with the character(s).
-nickname-prefix: '~'
+nickname-prefix: 'f'
 
 # The maximum length allowed in nicknames. The nickname prefix is not included in this.
 max-nick-length: 15
