--- a/servidor_minecraft/plugins/TAB/config.yml
+++ b/servidor_minecraft/plugins/TAB/config.yml
@@ -101,11 +101,13 @@ scoreboard:
         - "%animation:MyAnimation1%"
         - "➤&b&lInfo:"
         - " &fNick: &b%player%"
-        - " &fPing: &b%ping%&bms"
+        - " &fRango: &bNinguno"
+        - " &fClan: &bNinguno"
         - ""
         - "➤&b&lEstadisticas:"
         - " &f⚔Kills: &b%statistic_player_kills%"
         - " &f☠Muertes: &b%statistic_deaths%"
+        - " &f$Dinero: &b%vault_eco_balance%$"
         - "%animation:MyAnimation1%"
     scoreboard:
       title: "<#E0B11E>MyServer</#FF0000>"
