--- a/servidor_minecraft/plugins/TAB/config.yml
+++ b/servidor_minecraft/plugins/TAB/config.yml
@@ -1,20 +1,15 @@
 # https://github.com/NEZNAMY/TAB/wiki/Feature-guide:-Header-&-Footer
 header-footer:
-  enabled: false
+  enabled: true
   header:
-    - "<#FFFFFF>&m                                                </#FFFF00>"
-    - "&3&lServer name"
-    - "&r&7&l>> %animation:Welcome%&3 &l%player%&7&l! &7&l<<"
-    - "&r&7Online players: &f%online%"
-    - "&6Online staff: &e%staffonline%"
+    - "<gradient:#55FFFF:#FFFFFF>─────────────────────</gradient>"
+    - "&b&lSGR"
+    - "&r&7Conectados: &f%online%"
     - ""
   footer:
-    - "%animation:time%"
-    - "&2Ping: %ping%"
-    - "&7&l Used memory: %memory-used% MB / %memory-max% MB"
     - ""
-    - "&r&7Visit our webpage %animation:web%"
-    - "<#FFFFFF>&m                                                </#FFFF00>"
+    - "&c%statistic_deaths%☠ &f| &9%statistic_player_kills%⚔"
+    - "<gradient:#55FFFF:#FFFFFF>─────────────────────</gradient>"
   disable-condition: '%world%=disabledworld'
   per-world:
     world1:
@@ -53,16 +48,16 @@ scoreboard-teams:
 playerlist-objective:
   enabled: true
   value: "%ping%"
-  fancy-value: "&b %ping%"
+  fancy-value: "&b %ping%ms"
   title: "TAB" # Only visible on Bedrock Edition
   render-type: INTEGER
   disable-condition: '%world%=disabledworld'
 
 # https://github.com/NEZNAMY/TAB/wiki/Feature-guide:-Belowname
 belowname-objective:
-  enabled: false
+  enabled: true
   value: "%health%"
-  title: "&cHealth"
+  title: "&c❤ &f| &b%statistic_player_kills% ⚔"
   fancy-value: "&c%health%"
   fancy-value-default: "NPC"
   disable-condition: '%world%=disabledworld'
@@ -101,7 +96,7 @@ scoreboard:
         - "%animation:MyAnimation1%"
         - "➤&b&lInfo:"
         - " &fNick: &b%player%"
-        - " &fRango: &bNinguno"
+        - " &fRango: %luckperms_prefix%"
         - " &fClan: &bNinguno"
         - ""
         - "➤&b&lEstadisticas:"
